--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,21 @@
       <version>[4.3,)</version>
       <scope>compile</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-core-asl</artifactId>
+      <version>[1.9,)</version>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
+      <version>[1.9,)</version>
+      <scope>compile</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
