--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,40 @@
 
   <dependencies>
     <dependency>
+      <groupId>io.baratine</groupId>
+      <artifactId>baratine-api</artifactId>
+      <version>SNAPSHOT</version>
+      <scope>system</scope>
+      <systemPath>${env.BARATINE_HOME}/lib/baratine-api.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>io.baratine</groupId>
+      <artifactId>baratine</artifactId>
+      <version>SNAPSHOT</version>
+      <scope>system</scope>
+      <systemPath>${env.BARATINE_HOME}/lib/baratine.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>io.baratine</groupId>
+      <artifactId>baratine-jee</artifactId>
+      <version>SNAPSHOT</version>
+      <scope>system</scope>
+      <systemPath>${env.BARATINE_HOME}/lib/javaee-7.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>io.baratine</groupId>
+      <artifactId>baratine-hessian</artifactId>
+      <version>SNAPSHOT</version>
+      <scope>system</scope>
+      <systemPath>${env.BARATINE_HOME}/lib/hessian.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>com.caucho</groupId>
+      <artifactId>lucene-plugin-client</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
       <version>[4.3,)</version>
