sync for lancre test

--- a/logging.properties
+++ b/logging.properties
@@ -1,1 +1,24 @@
-test.level=SEVERE
+# To also add the FileHandler, use the following line instead.
+handlers=java.util.logging.FileHandler, java.util.logging.ConsoleHandler
+
+.level= INFO
+
+java.util.logging.FileHandler.pattern = /tmp/java%u.log
+java.util.logging.FileHandler.count = 12
+java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
+java.util.logging.FileHandler.append = true
+java.util.logging.FileHandler.Level = INFO
+
+# Limit the message that are printed on the console to INFO and above.
+java.util.logging.ConsoleHandler.level = WARNING
+java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
+
+# java.util.logging.SimpleFormatter.format=%4$s: %5$s [%1$tc]%n
+
+
+
+
+
+
+
+
